--- a/css/gridComponent.css
+++ b/css/gridComponent.css
@@ -13,9 +13,9 @@
 	padding: 0px;
 	border-style: solid;
 	border-color: #6B6B6B;
-	border-width:2px;
-	border-top-style: none;
-	border-left-style: none;
+	border-width:1px;
+	border-top-width:0px;
+	border-bottom-width:2px;
 	/*-webkit-box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, .15);
 	-moz-box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, .15);
 	box-shadow: 2px 3px 2px 2px rgba(0, 0, 0, .15);*/
@@ -58,11 +58,6 @@
     align-items: center;
     text-align: center;
     opacity: 0;
-    border-style: solid;
-	border-color: #6B6B6B;
-	border-width:2px;
-	border-bottom-style: none;
-	border-right-style: none;
 }
 
 .cbp-rfgrid li a .date {
