--- a/css/style.css
+++ b/css/style.css
@@ -127,5 +127,8 @@
     padding-top:18px;
     color:#fff;
     text-align:center;
+    border-bottom-style: solid;
+	border-color: #6B6B6B;
+	border-width:2px;
 }
 
