--- a/css/gridComponent.css
+++ b/css/gridComponent.css
@@ -141,6 +141,23 @@
 		width: -webkit-calc(100% / 3);
 		width: calc(100% / 3);
 	}
+	.cbp-rfgrid li a .block h3 {
+	width: 100%;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 4em;
+	/*padding: 0 10px;*/
+	margin-top:50%;
+}
+
+.cbp-rfgrid li a .date h3 {
+	width: 100%;
+	color: #000;
+	text-transform: uppercase;
+	font-size: 4em;
+	/*padding: 0 10px;*/
+	margin-top:50%;
+}
 }
 
 @media screen and (max-width: 300px) {
